# libki-triage

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/libki_triage/: classify.py  cli.py  codegen.py  config.py  db.py  embed.py  github_ops.py  harvest.py  recommend.py  search.py  web.py
src/libki_triage/guidelines/: ecosystem.md  libki-client.md  libki-print-manager.md  libki-print-station.md  libki-server.md
src/libki_triage/static/: styles.css
src/libki_triage/templates/: base.html  group_detail.html  groups.html  index.html  issue_detail.html  issues.html  login.html  search.html  settings.html
tests/: test_smoke.py  test_web.py
