[project]
name = "libki-triage"
version = "0.0.1"
description = "Semantic triage tool for the Libki ecosystem's GitHub issues."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Brendan" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "fastembed>=0.3",
    "numpy>=1.26",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
libki-triage = "libki_triage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libki_triage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
